sass/shot_item.scss
.shot-list {
  > .shot-item {
    color: rgb(68, 68, 68);
    margin: 0 15px 30px 15px;
    width: 420px;
    float: left;
  }
  &.small > .shot-item {
    width: 220px;
  }
}

.shot-card {
  cursor: pointer;
  background: white;
  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
  border-radius: 3px;
  position: relative;
  padding: 10px;
  &:after {
    content: ' ';
    display: table;
    clear: both;
  }
  &:before {
    content: ' ';
    display: table;
    clear: both;
  }
}

.shot-image {
  // margin: 10px;
  img {
    width: 100%;
  }
}
.large .shot-image {
  height: 300px;
}
.small .shot-image {
  height: 150px;
}

.shot-over {
  position: absolute;
  top: 0;
  bottom: 10px;
  left: 0;
  width: 100%;
  margin: 0;
  padding: 20px;
  font-size: 13px;
  line-height: 2;
  text-decoration: none;
  color: #888;
  background: #fff;
  background: rgba(255,255,255,0.96);
  overflow: hidden;
  box-sizing: border-box;
  opacity: 0;
  transition: opacity .25s ease;
  -moz-transition: opacity .25s ease;
  -webkit-transition: opacity .25s ease;
  &:hover {
    opacity: 1;
  }
  strong {
    display: block;
    margin: 0 0 4px 0;
    font-weight: 500;
    font-size: 14px;
    line-height: 1.2;
    color: #444;
  }
  .comment {
    display: block;
    margin: 0 0 10px 0;
    font-size: 11px;
    line-height: 1.4;
    color: #777;
    overflow: hidden;
    text-overflow: ellipsis;
    p {
      margin: 0;
    }
  }
  .timestamp {
    display: block;
    position: absolute;
    bottom: 10px;
    left: 20px;
    margin: 0 0 3px 0;
    font-size: 12px;
    font-weight: normal;
    font-style: normal;
    line-height: 1;
    color: #777;
  }
}
.shot-list.small {
  .shot-over > .comment {
    height: 80px;
  }
}

.shot-list.large {
  .shot-over {
    padding: 30px;
    strong {
      font-size: 16px;
      margin-bottom: 10px;
    }
    .comment {
      font-size: 14px;
      height: 210px;
    }
    .timestamp {
      left: 30px;
      bottom: 20px;
    }
  }
}

.shot-list.with-meta {
  .shot-over {
    bottom: 30px;
  }
}
.shot-item .attribution {
  color: rgb(58, 139, 187);
  font-size: 13px;
  margin-top: 12px;
  padding-left: 10px;
  line-height: 10px;
  .avater {
    display: inline-block;
    width: 16px;
    vertical-align: middle;
    margin-right: 10px;
    img {
      width: 100%;
      border-radius: 50%;
    }
  }
  &:before {
    content: ' ';
    display: inline-block;
    height: 100%;
    vertical-align: middle;
  }
}


.shot-extra {
  color: rgb(170, 170, 170);
  font-size: 13px;
  margin-top: 10px;

  > li {
    float: right;
    margin-left: 5px;
    padding-left: 18px;
    margin-right: 5px;
    background-size: 15px 11px;
    background-repeat: no-repeat;
    background-position: 2px 1px;
  }
  &:after {
    content: ' ';
    display: table;
    clear: both;
  }
  .view-count {
    @include bg('icon-views-sm-2x.png');
  }
  .likes-count {
    @include bg('icon-hearts-2x.png');
    background-size: 12px 45px;
    background-position: 3px 1px;
  }
  .comments-count {
    @include bg('icon-comments-2x.png');
    background-size: 12px 59px;
  }

}

